fix del overflow

--- a/src/css/css_puro.css
+++ b/src/css/css_puro.css
@@ -434,7 +434,7 @@ background-color: white;
         text-align: center;
         background-color: white;
         border-radius: 15%;
-        overflow:auto;
+        overflow:hidden;
         
                 
         
@@ -474,6 +474,13 @@ background-color: white;
 
     .item__menu img{
         width: 100%;
+    }
+
+    .border__item{
+        display: flex;
+        width: 100%;
+       
+        border-radius: 50%;
     }
     .item__menu a {
         font-size: 1.5em ;
